@@ -1,12 +1,12 @@
-<printer id="printer/Minolta-magicolor_2300W">
+<printer id="printer/Minolta-magicolor_2400W">
     <make>Minolta</make>
-    <model>magicolor 2300W</model>
+    <model>magicolor 2400W</model>
     <mechanism>
 	<laser/>
 	<color/>
 	<resolution>
 	    <dpi>
-		<x>1200</x>
+		<x>2400</x>
 		<y>600</y>
 	    </dpi>
 	</resolution>
@@ -36,37 +36,37 @@
 	    <partno>1710520-001</partno>
 	</consumables>
     </mechanism>
-    <url>http://www.minolta-qms.com/products/color/mc2300DL/index.asp</url>
+    <url>http://printer.konicaminolta.net/products/color/mc2400W/index.asp</url>
     <lang>
 	<proprietary/>
 	<!--no pjl--><!--No "text"?-->
     </lang>
     <autodetect>
 	<parallel>
-	    <!-- CLASS:PRINTER; MODEL:mc2300W; MANUFACTURER:KONICA MINOLTA; DESCRIPTION:KONICA MINOLTA mc2300W; COMMAND SET:NA; -->
-	    <!-- <ieee1284>CLASS:PRINTER;MODEL:magicolor 2300 W;MANUFACTURER:MINOLTA-QMS;</ieee1284> -->
+	    <!-- CLASS:PRINTER; MODEL:mc2400W; MANUFACTURER:KONICA MINOLTA; DESCRIPTION:KONICA MINOLTA mc2400W; COMMAND SET:NA; -->
+	    <!-- <ieee1284>CLASS:PRINTER;MODEL:magicolor 2400 W;MANUFACTURER:MINOLTA-QMS;</ieee1284> -->
 	    <manufacturer>KONICA MINOLTA</manufacturer>
 	    <commandset>NA</commandset>
-	    <model>mc2300W</model>
-	    <description>KONICA MINOLTA mc2300W</description>
+	    <model>mc2400W</model>
+	    <description>KONICA MINOLTA mc2400W</description>
 	</parallel>
 	<usb>
-	    <!-- MFG:KONICA MINOLTA;CMD:NA;MDL:mc2300W;CLS:PRINTER;DES:KONICA MINOLTA mc2300W; -->
+	    <!-- MFG:KONICA MINOLTA;CMD:NA;MDL:mc2400W;CLS:PRINTER;DES:KONICA MINOLTA mc2400W; -->
 	    <manufacturer>KONICA MINOLTA</manufacturer>
 	    <commandset>NA</commandset>
-	    <model>mc2300W</model>
-	    <description>KONICA MINOLTA mc2300W</description>
+	    <model>mc2400W</model>
+	    <description>KONICA MINOLTA mc2400W</description>
 	</usb>
     </autodetect>
     <functionality>B</functionality>
-    <driver>m2300w</driver>
+    <driver>m2400w</driver>
     <!--no "contrib_url"-->
     <comments>
       <en>
 
-	The Minolta magicolor 2300W is a GDI color laser printer with
-	a 2004 street price of $400-$600 USD. This printer is supported
-	by the m2300w open source printer driver.
+	The Minolta magicolor 2400W is a GDI color laser printer with
+	a 2005 street price of circa $300 USD. This printer is
+	supported by the m2300w open source printer driver.
 
       </en>
     </comments>
