@@ -1,3 +1,11 @@
+2005-10-27  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/Minolta-magicolor_2400W.xml: Added Konica Minolta
+	  magicolor 2400W.
+
+	* printer/Minolta-magicolor_2300W.xml: Text and IEEE-1284 ID
+	  updates.
+
 2005-10-26  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* configure.in, Makefile.in: Let installed custom PPDs get
